force-app/main/default/objects/Auto_Configuration__c/Auto_Configuration__c.object-meta.xml
<CustomObject>
    <label>Customer DRIVE Configuration</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Auto Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer DRIVE Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>