force-app/main/default/objects/Auto_Configuration__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Tell us more about the vehicle, hardware and software used. For example: number of hardware units per vehicle and information about homegrown partner and 3rd party software.</inlineHelpText>
    <label>Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>