force-app/main/default/objects/Auto_Configuration__c/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <inlineHelpText>Short description of vehicle. For example: BB8-2018 Ford MKZ</inlineHelpText>
    <label>Nickname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>