force-app/main/default/objects/Auto_Configuration__c/fields/NVIDIA_Hardware__c.field-meta.xml
<CustomField>
    <fullName>NVIDIA_Hardware__c</fullName>
    <label>NVIDIA Hardware in Vehicle</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>NVIDIA_Hardware_Used__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive: DRIVE Platform</fullName>
            </value>
            <value>
                <fullName>Automotive: Custom Hardware</fullName>
            </value>
            <value>
                <fullName>Embedded: Jetson Platform</fullName>
            </value>
            <value>
                <fullName>GPU: GeForce GTX</fullName>
            </value>
            <value>
                <fullName>GPU: Quadro</fullName>
            </value>
            <value>
                <fullName>GPU: Tesla</fullName>
            </value>
            <value>
                <fullName>GPU: DRIVE PX2-G3</fullName>
            </value>
            <value>
                <fullName>GPU: PG189</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>