force-app/main/default/objects/Auto_Configuration__c/fields/NVIDIA_Hardware_Used__c.field-meta.xml
<CustomField>
    <fullName>NVIDIA_Hardware_Used__c</fullName>
    <label>NVIDIA Hardware Used</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vehicle_or_Bench_Configuration__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>