force-app/main/default/objects/Auto_Configuration__c/fields/NVIDIA_Software_Used__c.field-meta.xml
<CustomField>
    <fullName>NVIDIA_Software_Used__c</fullName>
    <label>NVIDIA Software Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Vehicle_or_Bench_Configuration__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DRIVE OS QNX</fullName>
            </value>
            <value>
                <fullName>DRIVE OS Linux</fullName>
            </value>
            <value>
                <fullName>DRIVE AV (Perception Stack)</fullName>
            </value>
            <value>
                <fullName>DRIVE IX</fullName>
            </value>
            <value>
                <fullName>DriveWorks</fullName>
            </value>
            <value>
                <fullName>CUDA</fullName>
            </value>
            <value>
                <fullName>TensorRT</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>