force-app/main/default/objects/Auto_Configuration__c/fields/Partner_and_Third_Party_Software_Used__c.field-meta.xml
<CustomField>
    <fullName>Partner_and_Third_Party_Software_Used__c</fullName>
    <label>Partner and Third Party Software Used</label>
    <length>100</length>
    <type>Text</type>
</CustomField>