force-app/main/default/objects/Auto_Configuration__c/fields/Primary_Vehicle_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vehicle_Purpose__c</fullName>
    <label>Primary Vehicle Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Autonomous Driving</fullName>
            </value>
            <value>
                <fullName>Data Collection</fullName>
            </value>
            <value>
                <fullName>Driver Monitoring</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
                <isActive>false</isActive>
                <label>L2</label>
            </value>
            <value>
                <fullName>L3</fullName>
                <isActive>false</isActive>
                <label>L3</label>
            </value>
            <value>
                <fullName>L4</fullName>
                <isActive>false</isActive>
                <label>L4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>