force-app/main/default/objects/Auto_Configuration__c/fields/Sensor_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Sensor_Configuration__c</fullName>
    <label>Sensor Configuration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Vehicle_or_Bench_Configuration__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Camera</fullName>
            </value>
            <value>
                <fullName>GPS &amp; IMU</fullName>
            </value>
            <value>
                <fullName>Hyperion 7.1</fullName>
            </value>
            <value>
                <fullName>Hyperion 8.0</fullName>
            </value>
            <value>
                <fullName>Lidar</fullName>
                <label>LiDAR</label>
            </value>
            <value>
                <fullName>Radar</fullName>
            </value>
            <value>
                <fullName>Thermal Camera</fullName>
            </value>
            <value>
                <fullName>TOF Camera</fullName>
            </value>
            <value>
                <fullName>Ultrasound</fullName>
            </value>
            <value>
                <fullName>V2X</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>DM – camera</fullName>
                <isActive>false</isActive>
                <label>DM – camera</label>
            </value>
            <value>
                <fullName>DM – other</fullName>
                <isActive>false</isActive>
                <label>DM – other</label>
            </value>
            <value>
                <fullName>Ethernet Camera</fullName>
                <isActive>false</isActive>
                <label>Ethernet Camera</label>
            </value>
            <value>
                <fullName>Ethernet Thermal Camera</fullName>
                <isActive>false</isActive>
                <label>Ethernet Thermal Camera</label>
            </value>
            <value>
                <fullName>GMSL Camera</fullName>
                <isActive>false</isActive>
                <label>GMSL Camera</label>
            </value>
            <value>
                <fullName>GNSS</fullName>
                <isActive>false</isActive>
                <label>GNSS</label>
            </value>
            <value>
                <fullName>GNSS/IMU</fullName>
                <isActive>false</isActive>
                <label>GNSS/IMU</label>
            </value>
            <value>
                <fullName>Hyperion Kit</fullName>
                <isActive>false</isActive>
                <label>Hyperion Kit</label>
            </value>
            <value>
                <fullName>IMU</fullName>
                <isActive>false</isActive>
                <label>IMU</label>
            </value>
            <value>
                <fullName>SERDES Camera</fullName>
                <isActive>false</isActive>
                <label>SERDES Camera</label>
            </value>
            <value>
                <fullName>SERDES Thermal Camera</fullName>
                <isActive>false</isActive>
                <label>SERDES Thermal Camera</label>
            </value>
            <value>
                <fullName>Thermal Cameras</fullName>
                <isActive>false</isActive>
                <label>Thermal Cameras</label>
            </value>
            <value>
                <fullName>USB Camera</fullName>
                <isActive>false</isActive>
                <label>USB Camera</label>
            </value>
            <value>
                <fullName>USB Thermal Camera</fullName>
                <isActive>false</isActive>
                <label>USB Thermal Camera</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>