force-app/main/default/objects/Auto_Configuration__c/fields/Vehicle_Count_with_this_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Count_with_this_Configuration__c</fullName>
    <businessOwnerUser>emukbil@nvidia.com.trprod</businessOwnerUser>
    <label>Vehicle Count with this Configuration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>