force-app/main/default/objects/Auto_Configuration__c/fields/Vehicle_Licensed_to_Drive_on_Public_Road__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Licensed_to_Drive_on_Public_Road__c</fullName>
    <label>Vehicle Licensed to Drive on Public Road</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>