force-app/main/default/objects/Auto_Configuration__c/fields/Vehicle_or_Bench_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_or_Bench_Configuration__c</fullName>
    <inlineHelpText>Please answer yes even if the vehicle does not use NVIDIA hardware</inlineHelpText>
    <label>Vehicle or Bench Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle Configuration</fullName>
            </value>
            <value>
                <fullName>Bench Configuration</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>