force-app/main/default/objects/Auto_Configuration__c/fields/Where_is_Vehicle_Driven__c.field-meta.xml
<CustomField>
    <fullName>Where_is_Vehicle_Driven__c</fullName>
    <label>Where is Vehicle Driven</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driven on public roads</fullName>
            </value>
            <value>
                <fullName>Driven on private roads</fullName>
            </value>
            <value>
                <fullName>Driven on both private and public roads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>