force-app/main/default/objects/Auto_Configuration__c/fields/Where_is_Vehicle_Licensed__c.field-meta.xml
<CustomField>
    <fullName>Where_is_Vehicle_Licensed__c</fullName>
    <label>Licensed Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NALA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>EMEAI</fullName>
                <isActive>false</isActive>
                <label>EMEAI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>