force-app/main/default/objects/Auto_Configuration__c/fields/X3rd_Party_Partner_Software_Used__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Partner_Software_Used__c</fullName>
    <label>3rd Party/Partner Software Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ROS</fullName>
            </value>
            <value>
                <fullName>3rd Party Supplier</fullName>
            </value>
            <value>
                <fullName>Homegrown (Partner)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Polysync</fullName>
                <isActive>false</isActive>
                <label>Polysync</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>