force-app/main/default/objects/Auto_Configuration__c/validationRules/If_NVIDIA_software_none_3rd_party_req.validationRule-meta.xml
<ValidationRule>
    <fullName>If_NVIDIA_software_none_3rd_party_req</fullName>
    <active>true</active>
    <description>Require the 3rd party software being used if NVIDIA software selection is None</description>
    <errorConditionFormula>AND (
INCLUDES (  NVIDIA_Software_Used__c , &quot;None&quot;),
ISBLANK ( TEXT (X3rd_Party_Partner_Software_Used__c )))</errorConditionFormula>
    <errorDisplayField>X3rd_Party_Partner_Software_Used__c</errorDisplayField>
    <errorMessage>If NVIDIA Software Used is None please enter details on the 3rd Party Software Used</errorMessage>
</ValidationRule>