force-app/main/default/objects/Auto_Configuration__c/validationRules/If_Vehicle_require_nickname.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Vehicle_require_nickname</fullName>
    <active>true</active>
    <description>If customer has a vehicle require the nickname</description>
    <errorConditionFormula>AND (
ISPICKVAL (  Vehicle_or_Bench_Configuration__c , &quot;Yes&quot;),
ISBLANK (  Nickname__c ))</errorConditionFormula>
    <errorDisplayField>Nickname__c</errorDisplayField>
    <errorMessage>Please confirm the vehicle nickname if the customer has vehicles</errorMessage>
</ValidationRule>