force-app/main/default/objects/Auto_Configuration__c/validationRules/If_Vehicle_then_require_vehicle_count.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Vehicle_then_require_vehicle_count</fullName>
    <active>true</active>
    <description>If the configuration is for a Vehicle then require the vehicle count on the record</description>
    <errorConditionFormula>AND (
ISPICKVAL (  Vehicle_or_Bench_Configuration__c , &apos;Vehicle Configuration&apos; ),
ISBLANK ( Vehicle_Count_with_this_Configuration__c ))</errorConditionFormula>
    <errorDisplayField>Vehicle_Count_with_this_Configuration__c</errorDisplayField>
    <errorMessage>Please enter number of vehicles with this configuration</errorMessage>
</ValidationRule>