force-app/main/default/objects/Auto_Configuration__c/listViews/My_Customer_DRIVE_Configurations.listView-meta.xml
<ListView>
    <fullName>My_Customer_DRIVE_Configurations</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Nickname__c</columns>
    <columns>NVIDIA_Hardware__c</columns>
    <columns>NVIDIA_Hardware_Used__c</columns>
    <columns>NVIDIA_Software_Used__c</columns>
    <columns>Vehicle_or_Bench_Configuration__c</columns>
    <columns>Vehicle_Count_with_this_Configuration__c</columns>
    <columns>Sensor_Configuration__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Customer DRIVE Configurations</label>
</ListView>